--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,8 @@
 disabled_rules: # rule identifiers to exclude from running
  - identifier_name
  - switch_case_alignment
+ - closure_parameter_position
+ - todo
 excluded: # paths to ignore during linting. Takes precedence over `included`.
  - Carthage
  - Pods
