--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,12 @@ disabled_rules: # rule identifiers to exclude from running
  - switch_case_alignment
  - closure_parameter_position
  - todo
+
 excluded: # paths to ignore during linting. Takes precedence over `included`.
  - Carthage
  - Pods
+
+line_length:
+ ignores_function_declarations: true
+ ignores_comments: true
+ warning: 130
